--- a/RanchRodeo/RanchRodeo-Info.plist
+++ b/RanchRodeo/RanchRodeo-Info.plist
@@ -5,7 +5,7 @@
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleDisplayName</key>
-	<string>Rodeo</string>
+	<string>Ranch Rodeo</string>
 	<key>CFBundleExecutable</key>
 	<string>${EXECUTABLE_NAME}</string>
 	<key>CFBundleIdentifier</key>
